@@ -1,6 +1,13 @@
 This is just to motivate myself to improve a little bit every day :)
 
-Best: 19
+Best: 20
+
+12-04-2024
+Streak: 20
+Learned:
+Did:
+    - Fix, clean up and test Calendar ViewModel and Repository
+        but still need to remove CalendarFragment
 
 11-04-2024
 Streak: 19
